--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "nodemon": "^3.1.9",
     "puppeteer": "^23.11.1",
+    "puppeteer-core": "^10.4.0",
     "uuid": "^11.0.3"
   }
 }
